--- a/index.html
+++ b/index.html
@@ -4,174 +4,107 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpinkTweet</title>
-
-    <!-- CSS styles -->
     <style>
-        /* Basic Reset */
-        * {
-          margin: 0;
-          padding: 0;
-          box-sizing: border-box;
-        }
-
-        /* Body */
+        /* Basic styles for the app */
         body {
-          font-family: Arial, sans-serif;
-          background-color: #f4f4f4;
-          color: #333;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
 
-        /* Header */
-        header {
-          background-color: #1DA1F2;
-          color: white;
-          padding: 20px;
-          text-align: center;
+        .app-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
 
-        header h1 {
-          font-size: 2em;
-        }
-
-        nav a {
-          color: white;
-          margin: 0 15px;
-          text-decoration: none;
-        }
-
-        nav a:hover {
-          text-decoration: underline;
-        }
-
-        /* Tweet Container */
-        #tweetsContainer {
-          padding: 20px;
+        .tweet-container {
+            width: 100%;
+            max-width: 500px;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
 
         .tweet {
-          background-color: white;
-          border-radius: 10px;
-          margin-bottom: 20px;
-          padding: 15px;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 15px;
+            margin: 10px 0;
+            background-color: #e1e8ed;
+            border-radius: 10px;
         }
 
-        .tweet-header {
-          display: flex;
-          align-items: center;
-          margin-bottom: 10px;
+        .tweet .user {
+            font-weight: bold;
         }
 
-        .profile-pic {
-          border-radius: 50%;
-          width: 40px;
-          height: 40px;
-          margin-right: 10px;
+        .tweet .content {
+            margin-top: 10px;
         }
 
-        .username {
-          font-weight: bold;
+        .tweet-actions {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
         }
 
-        .tweet-content p {
-          margin-bottom: 10px;
+        .tweet-actions button {
+            background-color: #1DA1F2;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 5px 10px;
+            cursor: pointer;
         }
 
-        .tweet-footer {
-          display: flex;
-          justify-content: space-between;
+        .tweet-actions button:hover {
+            background-color: #0d8bcf;
         }
 
-        .tweet-footer div {
-          cursor: pointer;
-          color: #1DA1F2;
+        .profile {
+            margin-top: 20px;
         }
 
-        /* Profile, Login, Signup Pages */
-        #signupPage, #loginPage, #profilePage {
-          display: none;
-          padding: 20px;
-          max-width: 400px;
-          margin: 0 auto;
-          background-color: white;
-          border-radius: 10px;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        .profile button {
+            background-color: #ff6b6b;
         }
 
-        #signupForm input, #loginForm input, #profileForm input {
-          width: 100%;
-          padding: 10px;
-          margin-bottom: 10px;
-          border-radius: 5px;
-          border: 1px solid #ccc;
-        }
-
-        #signupForm button, #loginForm button, #profileForm button {
-          padding: 10px;
-          background-color: #1DA1F2;
-          color: white;
-          border: none;
-          border-radius: 5px;
-          cursor: pointer;
-        }
-
-        #signupForm button:hover, #loginForm button:hover, #profileForm button:hover {
-          background-color: #0d8bcf;
+        .profile button:hover {
+            background-color: #d9534f;
         }
     </style>
 </head>
 <body>
+    <div class="app-container">
+        <!-- Profile Section -->
+        <div class="profile" id="profileSection" style="display: none;">
+            <h3>Welcome, <span id="userName"></span></h3>
+            <button onclick="logout()">Log Out</button>
+        </div>
 
-    <header>
-        <h1>SpinkTweet</h1>
-        <nav>
-            <a href="javascript:void(0);" onclick="showHomePage()">Home</a>
-            <a href="javascript:void(0);" onclick="showProfilePage()">Profile</a>
-            <a href="javascript:void(0);" onclick="showLoginPage()">Login</a>
-        </nav>
-    </header>
+        <!-- Tweets Section -->
+        <div id="tweetSection" class="tweet-container">
+            <h2>SpinkTweet</h2>
+            <div id="tweetsList">
+                <!-- Tweets will appear here -->
+            </div>
 
-    <!-- Tweets Section -->
-    <div id="tweetsContainer"></div>
-
-    <!-- Signup Page (signup.html) -->
-    <div id="signupPage">
-        <h2>Sign Up</h2>
-        <form id="signupForm">
-            <input type="text" id="signupUsername" placeholder="Username" required>
-            <input type="password" id="signupPassword" placeholder="Password" required>
-            <button type="submit">Sign Up</button>
-        </form>
-    </div>
-
-    <!-- Login Page (login.html) -->
-    <div id="loginPage">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <input type="text" id="loginUsername" placeholder="Username" required>
-            <input type="password" id="loginPassword" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>
-    </div>
-
-    <!-- Profile Page (profile.html) -->
-    <div id="profilePage">
-        <h2>Profile</h2>
-        <form id="profileForm">
-            <input type="text" id="profileUsername" placeholder="Username" required>
-            <input type="file" id="profilePic" accept="image/*">
-            <button type="submit">Save</button>
-        </form>
+            <!-- Tweet Input Section -->
+            <textarea id="tweetInput" placeholder="What's on your mind?" rows="3" style="width: 100%;"></textarea>
+            <button onclick="postTweet()">Post Tweet</button>
+        </div>
     </div>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
 
-    <!-- JavaScript -->
     <script>
-        // Initialize Firebase
+        // Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyDWDk_p33Y_jgPNJPHoJApEmo0W7Q9BhxA",
             authDomain: "spinktweet.firebaseapp.com",
@@ -182,132 +115,87 @@
             measurementId: "G-81YMX6VBK4"
         };
 
+        // Initialize Firebase
         const app = firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
         const auth = firebase.auth();
+        const db = firebase.firestore();
 
-        document.addEventListener("DOMContentLoaded", function() {
-            // Render Tweets on Home Page
-            renderTweets();
-
-            // Handle Signup Form Submission
-            document.getElementById('signupForm').addEventListener('submit', handleSignup);
-
-            // Handle Login Form Submission
-            document.getElementById('loginForm').addEventListener('submit', handleLogin);
-
-            // Handle Profile Form Submission
-            document.getElementById('profileForm').addEventListener('submit', handleProfileUpdate);
+        // Check if user is logged in
+        auth.onAuthStateChanged(user => {
+            if (user) {
+                document.getElementById('profileSection').style.display = 'block';
+                document.getElementById('userName').textContent = user.email.split('@')[0];
+                loadTweets();
+            } else {
+                window.location.href = 'login.html'; // Redirect to login if not authenticated
+            }
         });
 
-        // Render Tweets from Firebase
-        function renderTweets() {
-            db.collection("tweets").get().then((querySnapshot) => {
-                querySnapshot.forEach((doc) => {
-                    const tweet = doc.data();
-                    const tweetHTML = `
-                        <div class="tweet" id="tweet-${doc.id}">
-                            <div class="tweet-header">
-                                <img src="${tweet.profilePic}" alt="${tweet.username}" class="profile-pic">
-                                <span class="username">${tweet.username}</span>
-                            </div>
-                            <div class="tweet-content">
-                                <p>${tweet.content}</p>
-                            </div>
-                            <div class="tweet-footer">
-                                <div class="likes" onclick="likeTweet('${doc.id}')">Likes: ${tweet.likes || 0}</div>
-                                <div class="replies" onclick="replyToTweet('${doc.id}')">Replies: ${tweet.replies || 0}</div>
-                            </div>
-                        </div>
-                    `;
-                    document.getElementById("tweetsContainer").innerHTML += tweetHTML;
-                });
-            });
+        // Post a tweet
+        function postTweet() {
+            const tweetInput = document.getElementById('tweetInput');
+            if (tweetInput.value.trim()) {
+                const tweetData = {
+                    user: auth.currentUser.email.split('@')[0],
+                    content: tweetInput.value.trim(),
+                    timestamp: firebase.firestore.FieldValue.serverTimestamp(),
+                    likes: 0,
+                    replies: 0
+                };
+
+                db.collection('tweets').add(tweetData)
+                    .then(() => {
+                        tweetInput.value = ''; // Clear input field
+                        loadTweets(); // Reload tweets
+                    })
+                    .catch(error => console.error("Error posting tweet: ", error));
+            }
         }
 
-        // Like Tweet
+        // Load tweets from Firestore
+        function loadTweets() {
+            db.collection('tweets').orderBy('timestamp', 'desc').get()
+                .then(snapshot => {
+                    const tweetsList = document.getElementById('tweetsList');
+                    tweetsList.innerHTML = ''; // Clear existing tweets
+                    snapshot.forEach(doc => {
+                        const tweet = doc.data();
+                        const tweetElement = document.createElement('div');
+                        tweetElement.classList.add('tweet');
+                        tweetElement.innerHTML = `
+                            <div class="user">${tweet.user}</div>
+                            <div class="content">${tweet.content}</div>
+                            <div class="tweet-actions">
+                                <button onclick="likeTweet('${doc.id}')">Like (${tweet.likes})</button>
+                                <button onclick="replyToTweet('${doc.id}')">Reply</button>
+                            </div>
+                        `;
+                        tweetsList.appendChild(tweetElement);
+                    });
+                })
+                .catch(error => console.error("Error loading tweets: ", error));
+        }
+
+        // Like a tweet
         function likeTweet(tweetId) {
-            const tweetRef = db.collection("tweets").doc(tweetId);
+            const tweetRef = db.collection('tweets').doc(tweetId);
             tweetRef.update({
                 likes: firebase.firestore.FieldValue.increment(1)
-            });
+            }).then(() => {
+                loadTweets(); // Reload tweets to reflect changes
+            }).catch(error => console.error("Error liking tweet: ", error));
         }
 
-        // Reply to Tweet
+        // Handle replies (just a placeholder for now)
         function replyToTweet(tweetId) {
-            // Handle replies here
-            alert(`Reply to tweet: ${tweetId}`);
+            alert("Replying to tweet...");
         }
 
-        // Show Home Page
-        function showHomePage() {
-            document.getElementById("signupPage").style.display = 'none';
-            document.getElementById("loginPage").style.display = 'none';
-            document.getElementById("profilePage").style.display = 'none';
-            document.getElementById("tweetsContainer").style.display = 'block';
-        }
-
-        // Show Signup Page
-        function showSignupPage() {
-            document.getElementById("signupPage").style.display = 'block';
-            document.getElementById("loginPage").style.display = 'none';
-            document.getElementById("profilePage").style.display = 'none';
-            document.getElementById("tweetsContainer").style.display = 'none';
-        }
-
-        // Show Login Page
-        function showLoginPage() {
-            document.getElementById("signupPage").style.display = 'none';
-            document.getElementById("loginPage").style.display = 'block';
-            document.getElementById("profilePage").style.display = 'none';
-            document.getElementById("tweetsContainer").style.display = 'none';
-        }
-
-        // Show Profile Page
-        function showProfilePage() {
-            document.getElementById("signupPage").style.display = 'none';
-            document.getElementById("loginPage").style.display = 'none';
-            document.getElementById("profilePage").style.display = 'block';
-            document.getElementById("tweetsContainer").style.display = 'none';
-        }
-
-        // Handle Sign Up
-        function handleSignup(event) {
-            event.preventDefault();
-            const username = document.getElementById('signupUsername').value;
-            const password = document.getElementById('signupPassword').value;
-            auth.createUserWithEmailAndPassword(username + "@example.com", password)
-                .then((userCredential) => {
-                    alert("Sign up successful!");
-                    showHomePage();
-                })
-                .catch((error) => {
-                    alert("Error: " + error.message);
-                });
-        }
-
-        // Handle Login
-        function handleLogin(event) {
-            event.preventDefault();
-            const username = document.getElementById('loginUsername').value;
-            const password = document.getElementById('loginPassword').value;
-            auth.signInWithEmailAndPassword(username + "@example.com", password)
-                .then((userCredential) => {
-                    alert("Login successful!");
-                    showHomePage();
-                })
-                .catch((error) => {
-                    alert("Error: " + error.message);
-                });
-        }
-
-        // Handle Profile Update
-        function handleProfileUpdate(event) {
-            event.preventDefault();
-            const username = document.getElementById('profileUsername').value;
-            const profilePic = document.getElementById('profilePic').files[0];
-            // You can upload the profilePic to Firebase Storage here
-            alert("Profile updated!");
+        // Logout the user
+        function logout() {
+            auth.signOut().then(() => {
+                window.location.href = 'login.html'; // Redirect to login after logout
+            }).catch(error => console.error("Error signing out: ", error));
         }
     </script>
 </body>
