--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <!-- Profile Section -->
         <div id="profileSection" style="display: none;">
-            <h2>Welcome, <span id="userName"></span></h2>
+            <h2>Welcome, <span id="userName">Anonymous</span></h2>
             <textarea id="tweetInput" placeholder="What's on your mind?" rows="3"></textarea>
             <button onclick="postTweet()">Post Tweet</button>
 
@@ -172,6 +172,13 @@
                 document.getElementById('loginForm').style.display = 'none';
                 document.getElementById('userName').textContent = user.email.split('@')[0];
                 loadTweets();
+            } else {
+                // Show profile page for anonymous user
+                document.getElementById('profileSection').style.display = 'block';
+                document.getElementById('signupForm').style.display = 'none';
+                document.getElementById('loginForm').style.display = 'none';
+                document.getElementById('userName').textContent = "Anonymous";
+                loadTweets();
             }
         }
 
@@ -190,7 +197,7 @@
             const tweetInput = document.getElementById('tweetInput').value;
             if (tweetInput.trim()) {
                 const tweetData = {
-                    user: auth.currentUser.email.split('@')[0],
+                    user: document.getElementById('userName').textContent,
                     content: tweetInput,
                     timestamp: firebase.firestore.FieldValue.serverTimestamp(),
                     likes: 0,
@@ -245,12 +252,22 @@
             });
         }
 
-        // Reply to a tweet (placeholder function)
+        // Reply to a tweet
         function replyToTweet(tweetId) {
-            alert("Replying to tweet...");
+            const tweetContent = prompt("Enter your reply:");
+            if (tweetContent) {
+                const tweetRef = db.collection('tweets').doc(tweetId);
+                tweetRef.update({
+                    replies: firebase.firestore.FieldValue.increment(1)
+                }).then(() => {
+                    loadTweets(); // Reload tweets after replying
+                }).catch(error => {
+                    alert("Error replying to tweet: ", error);
+                });
+            }
         }
 
-        // Initial setup
+        // Automatically show profile page if logged in
         auth.onAuthStateChanged(user => {
             if (user) {
                 showProfilePage();
@@ -258,6 +275,7 @@
                 showLoginForm();
             }
         });
+
     </script>
 </body>
 </html>
